2012-0X-XX  UnNetHack X.X.X
	* new dungeon features:
	  - muddy swamp (from NetHack Brass)

	* bug fixes:
	  - Draw health bar in inverse when color is disabled (reported by
	    Bernard Helyer)
	  - Warn atheist player when trying to offering the Amulet of Yendor

	* build fixes:
	  - Compilation failed on openSUSE when trying to link with curses but
	    tparm being present in ncurses (reported by Roger Koot)

2012-02-05  UnNetHack 3.6.1
	* Scatter contents of bag of holding explosion instead of
	  destroying it (from SporkHack)
	* Quest leaders can smash rocks when angry (from SporkHack)
	* Blackmarket shopkeeper can smash rocks when angry
	* Strength bonus for two-handed weaponry is doubled. (from SporkHack)
	* Tins made from giant turtles are delicious and nutritious (by Bernard Helyer)
	* Gauntlets of power give +7 damage bonus to differentiate
	  from 18/** (from SporkHack)

	* Win32:
	  - Standard Windows GUI bundled
	  - HTML dumps enabled

	* New option: bones: allow player control of loading bones (partly
	  from NAO)

	* user interface improvements:
	  - Monster Targeting v1.2 (by Pasi Kallinen)
	  - Changed 'C' to present a menu (from NAO)
	  - Hiding useless options in TTY mode
	  - Display items in inventory list

	* bug fixes:
	  - Fixed crash when player polyed into gold dragon because of wearing
	    a gold dragon armor and a bones file getting written and the gold
	    armor getting removed during bones inventory trimming
	  - replace "dungeon" when applying drum of earthquake with
	    appropriate description depening on branch or level

	* vanilla bug fixes:
	  - C343-72:  You get confusing messages when you stop levitating
	              while on a flying steed. (by Edoardo Spadolini)
	  - C343-174: Drum of earthquake gives inappropriate message if hero
	              or monster is in a pit.

2011-10-08  UnNetHack 3.6.0
	* changing color of monster with config line:
	  MONSTERCOLOR=acid blob:lightcyan