@@ -218,7 +218,7 @@ E struct obj *FDECL(o_in, (struct obj*,CHAR_P));
 E struct obj *FDECL(o_material, (struct obj*,unsigned));
 E int FDECL(gold_detect, (struct obj *));
 E int FDECL(food_detect, (struct obj *));
-E int FDECL(object_detect, (struct obj *,int));
+E int FDECL(object_detect, (struct obj *,int,BOOLEAN_P));
 E int FDECL(monster_detect, (struct obj *,int));
 E int FDECL(trap_detect, (struct obj *));
 E const char *FDECL(level_distance, (d_level *));
