@@ -397,9 +397,10 @@ register struct obj	*sobj;
  *	0 - something was detected
  */
 int
-object_detect(detector, class)
+object_detect(detector, class, quiet)
 struct obj	*detector;	/* object doing the detecting */
 int		class;		/* an object class, 0 for all */
+boolean		quiet;		/* don't output any message */
 {
     register int x, y;
     char stuff[BUFSZ];
@@ -473,15 +474,15 @@ int		class;		/* an object class, 0 for all */
     if (!clear_stale_map(!class ? ALL_CLASSES : class, 0) && !ct) {
 	if (!ctu) {
 	    if (detector)
-		strange_feeling(detector, "You feel a lack of something.");
+		if (!quiet) strange_feeling(detector, "You feel a lack of something.");
 	    return 1;
 	}
 
-	You("sense %s nearby.", stuff);
+	if (!quiet) You("sense %s nearby.", stuff);
 	return 0;
     }
 
-    cls();
+    if (!quiet) cls();
 
     u.uinwater = 0;
 /*
@@ -559,13 +560,15 @@ int		class;		/* an object class, 0 for all */
     }
 
     newsym(u.ux,u.uy);
-    You("detect the %s of %s.", ct ? "presence" : "absence", stuff);
-    display_nhwindow(WIN_MAP, TRUE);
-    /*
-     * What are we going to do when the hero does an object detect while blind
-     * and the detected object covers a known pool?
-     */
-    docrt();	/* this will correctly reset vision */
+    if (!quiet) {
+	    You("detect the %s of %s.", ct ? "presence" : "absence", stuff);
+	    display_nhwindow(WIN_MAP, TRUE);
+	    /*
+	     * What are we going to do when the hero does an object detect while blind
+	     * and the detected object covers a known pool?
+	     */
+	    docrt();	/* this will correctly reset vision */
+    }
 
     u.uinwater = uw;
     if (Underwater) under_water(2);
@@ -880,11 +883,11 @@ struct obj *obj;
 	if (ch == DEF_MIMIC_DEF) ch = DEF_MIMIC;
 
 	if ((class = def_char_to_objclass(ch)) != MAXOCLASSES)
-		ret = object_detect((struct obj *)0, class);
+		ret = object_detect((struct obj *)0, class, FALSE);
 	else if ((class = def_char_to_monclass(ch)) != MAXMCLASSES)
 		ret = monster_detect((struct obj *)0, class);
 	else if (iflags.bouldersym && (ch == iflags.bouldersym))
-		ret = object_detect((struct obj *)0, ROCK_CLASS);
+		ret = object_detect((struct obj *)0, ROCK_CLASS, FALSE);
 	else switch(ch) {
 		case '^':
 		    ret = trap_detect((struct obj *)0);
